--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@expo/vector-icons": "^14.0.2",
     "@hookform/error-message": "^2.0.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
     "axios": "^1.3.0",
     "expo": "^52.0.33",
     "expo-blur": "~14.0.3",
