--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.43.0",
     "react-native": "0.76.7",
+    "react-native-calendars": "^1.1310.0",
     "react-native-error-boundary": "^1.2.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
